--- a/index.html
+++ b/index.html
@@ -34,14 +34,12 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 
 /* ---------------- SKILLS ---------------- */
 .skills-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;justify-content:center;text-align:center}
-.skill-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.12);transition:.4s;display:flex;flex-direction:column;justify-content:space-between}
+.skill-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.12);transition:.4s}
 .skill-card:hover{transform:translateY(-8px);box-shadow:0 20px 40px rgba(90,160,255,.25)}
-.skills-grid .skill-card:nth-child(5){grid-column:1/-1;justify-self:center}
 
 /* ---------------- OTHER ---------------- */
 .other-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center;justify-content:center}
 .other-grid p{color:#aaa;transition:.4s}
-.other-grid p:nth-child(5){grid-column:1/-1;justify-self:center}
 
 /* ---------------- PROJECTS ---------------- */
 .project-tabs{display:flex;justify-content:center;gap:20px;margin-bottom:40px}
@@ -49,10 +47,10 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 .project-tabs button.active{background:linear-gradient(135deg,#5ddcff,#9a5cff);color:#000}
 
 .projects-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:30px}
-.project-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.15);transition:.4s;position:relative;display:flex;flex-direction:column;justify-content:space-between}
+.project-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.15);transition:.4s;position:relative}
 .project-card:hover{transform:translateY(-10px);box-shadow:0 20px 50px rgba(150,100,255,.3)}
 .project-card p{color:#aaa;margin-top:10px}
-.view-btn{margin-top:15px;padding:8px 22px;border-radius:20px;background:linear-gradient(135deg,#9a5cff,#5ddcff);color:#000;border:none;cursor:pointer;font-weight:600;text-align:center;display:inline-block}
+.view-btn{margin-top:15px;padding:8px 22px;border-radius:20px;background:linear-gradient(135deg,#9a5cff,#5ddcff);color:#000;border:none;cursor:pointer;font-weight:600}
 
 /* ---------------- CONTACT ---------------- */
 .contact{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center}
@@ -60,28 +58,14 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 .contact a{color:#5ddcff;text-decoration:none}
 
 /* ---------------- BUTTONS ---------------- */
-.toggle-effects,.lang-toggle {
-  position: fixed;
-  bottom: 20px;
-  z-index: 200;
-  background: rgba(10,10,20,0.7);
-  border: 1px solid #5ddcff;
-  color: #fff;
-  padding: 8px 14px;
-  border-radius: 20px;
-  cursor: pointer;
-  backdrop-filter: blur(6px);
-}
-.toggle-effects { right: 20px; }
-.lang-toggle { right: 150px; }
+.lang-toggle, .toggle-effects{position:fixed;bottom:20px;right:20px;z-index:200;background:rgba(10,10,20,.7);border:1px solid #5ddcff;color:#fff;padding:8px 14px;border-radius:20px;cursor:pointer;backdrop-filter:blur(6px)}
+.toggle-effects{right:150px}
 
 /* ---------------- MODAL ---------------- */
 .modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.85);justify-content:center;align-items:center;z-index:300;padding:20px}
 .modal-content{background:#111;border-radius:20px;padding:30px;max-width:500px;width:100%;position:relative;text-align:center}
 .modal-content img{max-width:150px;margin-bottom:20px;border-radius:12px}
 .modal-content .close{position:absolute;top:15px;right:15px;cursor:pointer;font-size:20px;color:#fff}
-
-/* Status text colors */
 .status-active { color: #0f0; font-weight:600; }
 .status-inactive { color: #f33; font-weight:600; }
 
@@ -124,11 +108,11 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
   <div class="container">
     <div class="logo">MYSTIC</div>
     <div class="nav-links">
-      <a href="#about" data-key="about"></a>
-      <a href="#skills" data-key="skills"></a>
-      <a href="#projects" data-key="projects"></a>
-      <a href="#other" data-key="other"></a>
-      <a href="#contact" data-key="contact"></a>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#other">Other</a>
+      <a href="#contact">Contact</a>
     </div>
   </div>
 </nav>
@@ -136,88 +120,93 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
 <section class="hero">
   <div>
     <h1>Mystic</h1>
-    <div class="subtitle"></div>
-    <p class="description"></p>
+    <div class="subtitle" data-key="subtitle"></div>
+    <p class="description" data-key="desc"></p>
   </div>
 </section>
 
 <section id="about">
-  <h2></h2>
-  <p class="description"></p>
+  <h2 data-key="about"></h2>
+  <p class="description" data-key="aboutText"></p>
 </section>
 
 <section id="skills">
-  <h2></h2>
+  <h2 data-key="skills"></h2>
   <div class="skills-grid">
-    <div class="skill-card"><h3>Game Testing</h3><p>Basics</p></div>
-    <div class="skill-card"><h3>Mod Development</h3><p>Basics</p></div>
-    <div class="skill-card"><h3>Python</h3><p>Basics</p></div>
-    <div class="skill-card"><h3>AutoHotkey</h3><p>Basics</p></div>
-    <div class="skill-card"><h3>3D Modelling</h3><p>Basics</p></div>
+    <div class="skill-card">
+      <h3 data-key="gt"></h3>
+      <p data-key="gtDesc"></p>
+    </div>
+    <div class="skill-card">
+      <h3 data-key="md"></h3>
+      <p data-key="mdDesc"></p>
+    </div>
+    <div class="skill-card"><h3>Python</h3><p data-key="basic"></p></div>
+    <div class="skill-card"><h3>AutoHotkey</h3><p data-key="basic"></p></div>
+    <div class="skill-card"><h3>3D Modelling</h3><p data-key="basic"></p></div>
   </div>
 </section>
 
 <section id="projects">
-  <h2></h2>
+  <h2 data-key="projects"></h2>
   <div class="project-tabs">
-    <button class="active" onclick="showProjects('testing', this)" data-key="testing"></button>
-    <button onclick="showProjects('mods', this)" data-key="mods"></button>
+    <button class="active" onclick="showProjects('testing', this)" data-key="gt"></button>
+    <button onclick="showProjects('mods', this)" data-key="md"></button>
   </div>
 
   <div class="projects-grid" id="testing">
-    <div class="project-card" data-info='{"title":"Abyss","position":"Veteran QA for Abyss","status":"Active","link":"https://discord.gg/deepspirit","image":"https://via.placeholder.com/150"}'>
+    <div class="project-card" data-info='{"title":"Abyss","position":"Veteran QA","status":"Active","link":"https://discord.gg/deepspirit","image":"abyss.png"}'>
       <h3>Abyss</h3>
-      <p>Roblox game by Deep Spirit Games</p>
-      <button class="view-btn" onclick="openModal(this)">View</button>
+      <p data-key="abyss"></p>
+      <button class="view-btn">View</button>
     </div>
-    <div class="project-card" data-info='{"title":"Solvo","position":"QA for Solvo","status":"Active","link":"https://discord.gg/ryfqDSYGMX","image":"https://via.placeholder.com/150"}'>
+    <div class="project-card" data-info='{"title":"Solvo","position":"QA","status":"Active","link":"https://discord.gg/ryfqDSYGMX","image":"solvo.png"}'>
       <h3>Solvo</h3>
-      <p>Roblox survival multiplayer</p>
-      <button class="view-btn" onclick="openModal(this)">View</button>
+      <p data-key="solvo"></p>
+      <button class="view-btn">View</button>
     </div>
-    <div class="project-card" data-info='{"title":"QA Central","position":"QA for multiple games","status":"Active","link":"https://discord.gg/qac","image":"https://via.placeholder.com/150"}'>
+    <div class="project-card" data-info='{"title":"QA Central","position":"QA","status":"Active","link":"https://discord.gg/qac","image":"qac.png"}'>
       <h3>QA Central</h3>
-      <p>Hub for developers seeking testers</p>
-      <button class="view-btn" onclick="openModal(this)">View</button>
+      <p data-key="qac"></p>
+      <button class="view-btn">View</button>
     </div>
   </div>
 
   <div class="projects-grid" id="mods" style="display:none">
     <div class="project-card">
       <h3>NoRainParticles</h3>
-      <p>Removes rain particles in Lethal Company</p>
-      <a class="view-btn" href="#" target="_blank">View</a>
+      <p data-key="nrp"></p>
+      <a class="view-btn" href="https://github.com/mystic-HQ/NoRainParticles" target="_blank">View</a>
     </div>
     <div class="project-card">
       <h3>BetterCruiserSync</h3>
-      <p>Syncs cruiser between players</p>
-      <a class="view-btn" href="#" target="_blank">View</a>
+      <p data-key="bcs"></p>
+      <a class="view-btn" href="https://github.com/mystic-HQ/BetterCruiserSync" target="_blank">View</a>
     </div>
   </div>
 </section>
 
 <section id="other">
-  <h2></h2>
+  <h2 data-key="other"></h2>
   <div class="other-grid">
-    <p>Cambridge B2 English certified</p>
-    <p>Algoréa contest quarter-finals</p>
-    <p>Uses AI for coding assistance</p>
-    <p>Speaks a bit of German</p>
-    <p>Add me on Discord</p>
+    <p data-key="b2"></p>
+    <p data-key="algorea"></p>
+    <p data-key="ai"></p>
+    <p data-key="german"></p>
+    <p data-key="discord"></p>
   </div>
 </section>
 
 <section id="contact">
-  <h2></h2>
+  <h2 data-key="contact"></h2>
   <div class="contact">
     <div>
-      <p>Email</p>
+      <p data-key="email"></p>
       <a href="mailto:mysticlchq@gmail.com">mysticlchq@gmail.com</a>
     </div>
     <div>
       <p>Discord</p>
       <a href="https://discord.com/users/858353168701718538">@_mystik</a>
-      <p>858353168701718538</p>
     </div>
   </div>
 </section>
@@ -230,17 +219,17 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
 <!-- Modal -->
 <div class="modal" id="projectModal">
   <div class="modal-content">
-    <span class="close" onclick="closeModal()">&times;</span>
+    <span class="close">&times;</span>
     <img id="modalImage" src="" alt="Project Image">
     <h3 id="modalTitle"></h3>
     <p><strong>Position:</strong> <span id="modalPosition"></span></p>
-    <p><strong>Status:</strong> <span id="modalStatus"></span></p>
+    <p><strong>Status:</strong> <span id="modalStatus" class="status-active"></span></p>
     <a id="modalLink" href="#" target="_blank">Visit</a>
   </div>
 </div>
 
 <script>
-// ---------------- LANGUAGE ----------------
+/* ---------------- DICTIONARY ---------------- */
 let fr = false;
 const dict = {
   about:["About","À propos"],
@@ -250,48 +239,42 @@ const dict = {
   contact:["Contact","Contact"],
   subtitle:["Developer & Game Tester","Développeur & Testeur de jeux"],
   desc:["French developer and game tester providing structured playtesting, bug reports, and gameplay feedback.","Développeur français et testeur de jeux fournissant des playtests structurés, rapports de bugs et retours de gameplay."],
-  aboutText:["I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback. My technical knowledge allows me to read and understand code, thus helping other developers through playtesting.","Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay. Mes connaissances me permettent de lire et comprendre du code, afin de pouvoir aider d'autres développeurs lors de Playtesting."]
+  aboutText:["I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback. My technical knowledge allows me to read and understand code, thus helping other developers through playtesting.","Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay. Mes connaissances me permettent de lire et comprendre du code, afin de pouvoir aider d'autres développeurs lors de Playtesting."],
+  testing:["Game Testing","Tests de jeux"],
+  mods:["Mods","Mods"],
+  gt:["Game Testing","Tests de jeux"],
+  gtDesc:["Playtesting, QA reports, balance feedback","Playtesting, rapports QA, équilibrage"],
+  md:["Mod Development","Développement de mods"],
+  mdDesc:["Gameplay mods, Behavior changes","Mods de gameplay, changement de comportement"],
+  basic:["Basics","Bases"],
+  abyss:["Roblox game by Deep Spirit Games focused on catching fishes underwater with a harpoon.","Jeu Roblox de Deep Spirit Games axé sur la pêche sous-marine avec un harpon."],
+  solvo:["Roblox multiplayer survival game centered around evading a killer.","Jeu Roblox multijoueur de survie centré sur la fuite d’un tueur."],
+  qac:["Multiple playtested games through QA Central, a hub for developers seeking testers.","Plusieurs jeux testés via QA Central, une plateforme pour développeurs recherchant des testeurs."],
+  nrp:["Lethal Company performance mod removing rain particle effects.","Mod de performance pour Lethal Company supprimant les particules de pluie."],
+  bcs:["Lethal Company mod that syncs the cruiser between players.","Mod de synchronisation du camion entre les joueurs sur Lethal Company."],
+  email:["Email","Email"],
+  b2:["Certified Cambridge B2 English level","Certification anglais B2"],
+  algorea:["Reached Quarter-Finals of national contest Algoréa twice (Scratch)","Quart de finale du Concours Algoréa national deux fois (Scratch)"],
+  ai:["I use AI to assist with coding","J'utilise l'IA pour m'aider à coder"],
+  german:["I speak a bit of German","Je parle un peu allemand"],
+  discord:["Add on Discord","M'ajouter sur Discord"]
 };
 
+/* ---------------- LANGUAGE TOGGLE ---------------- */
 function updateLanguage(){
   document.querySelectorAll('[data-key]').forEach(el=>{
     const key = el.getAttribute('data-key');
     if(dict[key]) el.textContent = dict[key][fr?1:0];
   });
-  document.querySelector('.subtitle').textContent = dict.subtitle[fr?1:0];
-  document.querySelector('.hero .description').textContent = dict.desc[fr?1:0];
-  document.querySelector('#about .description').textContent = dict.aboutText[fr?1:0];
+  document.getElementById('langToggle').textContent = fr ? 'EN':'FR';
 }
-
 document.getElementById('langToggle').addEventListener('click',()=>{
   fr = !fr;
-  document.getElementById('langToggle').textContent = fr?'EN':'FR';
   updateLanguage();
 });
 updateLanguage();
 
-// ---------------- EFFECTS ----------------
-let effectsEnabled = true;
-document.querySelector('.toggle-effects').addEventListener('click',()=>{
-  effectsEnabled = !effectsEnabled;
-  document.querySelector('.bg').style.display = effectsEnabled?'block':'none';
-  document.querySelector('.toggle-effects').textContent = effectsEnabled?'Disable Effects':'Enable Effects';
-});
-
-// ---------------- PROJECT MODAL ----------------
-function openModal(btn){
-  const card = btn.closest('.project-card');
-  const info = JSON.parse(card.dataset.info);
-  document.getElementById('modalImage').src = info.image;
-  document.getElementById('modalTitle').textContent = info.title;
-  document.getElementById('modalPosition').textContent = info.position;
-  document.getElementById('modalStatus').textContent = info.status;
-  document.getElementById('modalLink').href = info.link;
-  document.getElementById('projectModal').style.display = 'flex';
-}
-function closeModal(){document.getElementById('projectModal').style.display='none'}
-
-// ---------------- PROJECT TABS ----------------
+/* ---------------- PROJECT TABS ---------------- */
 function showProjects(id, btn){
   document.querySelectorAll('.projects-grid').forEach(grid=>grid.style.display='none');
   document.getElementById(id).style.display='grid';
@@ -299,18 +282,50 @@ function showProjects(id, btn){
   btn.classList.add('active');
 }
 
-// ---------------- PARTICLES ----------------
+/* ---------------- EFFECTS TOGGLE ---------------- */
+let effectsOn = true;
+document.querySelector('.toggle-effects').addEventListener('click',()=>{
+  effectsOn = !effectsOn;
+  document.querySelector('.bg').style.display = effectsOn?'block':'none';
+  document.querySelector('.toggle-effects').textContent = effectsOn?'Disable Effects':'Enable Effects';
+});
+
+/* ---------------- PARTICLES ---------------- */
 const particles = document.getElementById('particles');
-for(let i=0;i<100;i++){
-  let span = document.createElement('span');
-  let size = Math.random()<0.5?'small':(Math.random()<0.7?'medium':'large');
-  span.className = size;
-  span.style.left = Math.random()*100+'%';
-  span.style.top = Math.random()*100+'%';
-  span.style.animationDuration = (5+Math.random()*15)+'s';
-  span.style.width = span.style.height = (size==='small'?1:size==='medium'?2:3)+'px';
+for(let i=0;i<150;i++){
+  const span = document.createElement('span');
+  const size = Math.random()*3+1;
+  span.className = size<1.5?'small':size<2.5?'medium':'large';
+  span.style.left=Math.random()*100+'vw';
+  span.style.animationDuration=10+Math.random()*20+'s';
+  span.style.width=size+'px';
+  span.style.height=size+'px';
   particles.appendChild(span);
 }
+
+/* ---------------- PROJECT MODAL ---------------- */
+const modal = document.getElementById('projectModal');
+const modalImage = document.getElementById('modalImage');
+const modalTitle = document.getElementById('modalTitle');
+const modalPosition = document.getElementById('modalPosition');
+const modalStatus = document.getElementById('modalStatus');
+const modalLink = document.getElementById('modalLink');
+document.querySelectorAll('.project-card .view-btn').forEach(btn=>{
+  btn.addEventListener('click',e=>{
+    const info = JSON.parse(btn.parentElement.dataset.info||'{}');
+    if(Object.keys(info).length){
+      modal.style.display='flex';
+      modalImage.src = info.image||'';
+      modalTitle.textContent = info.title||'';
+      modalPosition.textContent = info.position||'';
+      modalStatus.textContent = info.status||'';
+      modalStatus.className = info.status==='Active'?'status-active':'status-inactive';
+      modalLink.href = info.link||'#';
+    }
+  });
+});
+document.querySelector('.modal .close').addEventListener('click',()=>modal.style.display='none');
+window.addEventListener('click',e=>{if(e.target==modal) modal.style.display='none'});
 </script>
 
 </body>
