--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@ section{padding:100px 20px;max-width:1400px;margin:auto}
 h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradient(135deg,#5ddcff,#9a5cff);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
 
 /* ---------------- SKILLS ---------------- */
-.skills-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;justify-content:center;text-align:center;place-items:center}
+.skills-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;justify-content:center;text-align:center}
 .skill-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.12);transition:.4s}
 .skill-card:hover{transform:translateY(-8px);box-shadow:0 20px 40px rgba(90,160,255,.25)}
 
 /* ---------------- OTHER ---------------- */
-.other-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center;justify-content:center;place-items:center}
+.other-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center;justify-content:center}
 .other-grid p{color:#aaa;transition:.4s}
+/* Force 5th item to a new row, centered */
+.other-grid p.fifth{grid-column:1/-1;}
 
 /* ---------------- PROJECTS ---------------- */
 .project-tabs{display:flex;justify-content:center;gap:20px;margin-bottom:40px}
@@ -47,28 +49,26 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 .project-tabs button.active{background:linear-gradient(135deg,#5ddcff,#9a5cff);color:#000}
 
 .projects-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:30px}
-.project-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.15);transition:.4s;position:relative;text-align:center}
+.project-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.15);transition:.4s;position:relative}
 .project-card:hover{transform:translateY(-10px);box-shadow:0 20px 50px rgba(150,100,255,.3)}
 .project-card p{color:#aaa;margin-top:10px}
-.project-card a.view-btn, .project-card button.view-btn{display:inline-block;margin-top:15px;padding:8px 22px;border-radius:20px;background:linear-gradient(135deg,#9a5cff,#5ddcff);color:#000;border:none;font-weight:600;text-decoration:none;cursor:pointer;transition:.3s}
-.project-card a.view-btn:hover, .project-card button.view-btn:hover{transform:translateY(-3px)}
+.view-btn{margin-top:15px;padding:8px 22px;border-radius:20px;background:linear-gradient(135deg,#9a5cff,#5ddcff);color:#000;border:none;cursor:pointer;font-weight:600}
 
 /* ---------------- CONTACT ---------------- */
 .contact{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center}
 .contact p{color:#aaa}
 .contact a{color:#5ddcff;text-decoration:none}
+.contact .discord{grid-column:1/-1;text-align:center;margin-top:10px;}
 
 /* ---------------- BUTTONS ---------------- */
-.lang-toggle{position:fixed;bottom:20px;right:150px;z-index:200;background:rgba(10,10,20,.7);border:1px solid #5ddcff;color:#fff;padding:8px 14px;border-radius:20px;cursor:pointer;backdrop-filter:blur(6px)}
-.toggle-effects{position:fixed;bottom:20px;right:20px;z-index:200;background:rgba(10,10,20,.7);border:1px solid #5ddcff;color:#fff;padding:8px 14px;border-radius:20px;cursor:pointer;backdrop-filter:blur(6px)}
+.lang-toggle, .toggle-effects{position:fixed;bottom:20px;right:20px;z-index:200;background:rgba(10,10,20,.7);border:1px solid #5ddcff;color:#fff;padding:8px 14px;border-radius:20px;cursor:pointer;backdrop-filter:blur(6px)}
+.toggle-effects{right:150px}
 
 /* ---------------- MODAL ---------------- */
 .modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.85);justify-content:center;align-items:center;z-index:300;padding:20px}
 .modal-content{background:#111;border-radius:20px;padding:30px;max-width:500px;width:100%;position:relative;text-align:center}
 .modal-content img{max-width:150px;margin-bottom:20px;border-radius:12px}
 .modal-content .close{position:absolute;top:15px;right:15px;cursor:pointer;font-size:20px;color:#fff}
-
-/* Status text colors */
 .status-active { color: #0f0; font-weight:600; }
 .status-inactive { color: #f33; font-weight:600; }
 
@@ -111,11 +111,11 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
   <div class="container">
     <div class="logo">MYSTIC</div>
     <div class="nav-links">
-      <a href="#about" data-key="about">About</a>
-      <a href="#skills" data-key="skills">Skills</a>
-      <a href="#projects" data-key="projects">Projects</a>
-      <a href="#other" data-key="other">Other</a>
-      <a href="#contact" data-key="contact">Contact</a>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#other">Other</a>
+      <a href="#contact">Contact</a>
     </div>
   </div>
 </nav>
@@ -153,25 +153,22 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
 <section id="projects">
   <h2 data-key="projects"></h2>
   <div class="project-tabs">
-    <button class="active" onclick="showProjects('testing', this)" data-key="testing"></button>
-    <button onclick="showProjects('mods', this)" data-key="mods"></button>
+    <button class="active" onclick="showProjects('testing', this)" data-key="gt"></button>
+    <button onclick="showProjects('mods', this)" data-key="md"></button>
   </div>
 
   <div class="projects-grid" id="testing">
-    <div class="project-card" 
-         data-info='{"position":"Veteran QA for Abyss","status":"Active","link":"https://discord.gg/deepspirit","image":"abyss.png"}'>
+    <div class="project-card" data-info='{"title":"Abyss","position":"Veteran QA","status":"Active","link":"https://discord.gg/deepspirit","image":"abyss.png"}'>
       <h3>Abyss</h3>
       <p data-key="abyss"></p>
       <button class="view-btn">View</button>
     </div>
-    <div class="project-card" 
-         data-info='{"position":"QA for Solvo","status":"Active","link":"https://discord.gg/ryfqDSYGMX","image":"solvo.png"}'>
+    <div class="project-card" data-info='{"title":"Solvo","position":"QA","status":"Active","link":"https://discord.gg/ryfqDSYGMX","image":"solvo.png"}'>
       <h3>Solvo</h3>
       <p data-key="solvo"></p>
       <button class="view-btn">View</button>
     </div>
-    <div class="project-card" 
-         data-info='{"position":"QA for Multiple Games via QA Central","status":"Active","link":"https://discord.gg/qac","image":"qac.png"}'>
+    <div class="project-card" data-info='{"title":"QA Central","position":"QA","status":"Active","link":"https://discord.gg/qac","image":"qac.png"}'>
       <h3>QA Central</h3>
       <p data-key="qac"></p>
       <button class="view-btn">View</button>
@@ -199,8 +196,7 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
     <p data-key="algorea"></p>
     <p data-key="ai"></p>
     <p data-key="german"></p>
-    <p>Worked on the wiki for the game Abyss on Roblox</p>
-    <p data-key="discord"></p>
+    <p class="fifth">Worked on the wiki for the game Abyss on Roblox.</p>
   </div>
 </section>
 
@@ -211,10 +207,9 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
       <p data-key="email"></p>
       <a href="mailto:mysticlchq@gmail.com">mysticlchq@gmail.com</a>
     </div>
-    <div>
-      <p>Discord</p>
-      <a href="https://discord.com/users/858353168701718538">@_mystik</a>
-      <p>858353168701718538</p>
+    <div class="discord">
+      <p data-key="discord"></p>
+      <a href="https://discord.com/users/858353168701718538" target="_blank">Add on Discord</a>
     </div>
   </div>
 </section>
@@ -237,7 +232,7 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
 </div>
 
 <script>
-/* ===== LANGUAGE DICTIONARY ===== */
+/* ---------------- DICTIONARY ---------------- */
 let fr = false;
 const dict = {
   about:["About","À propos"],
@@ -260,57 +255,76 @@ const dict = {
   qac:["Multiple playtested games through QA Central, a hub for developers seeking testers.","Plusieurs jeux testés via QA Central, une plateforme pour développeurs recherchant des testeurs."],
   nrp:["Lethal Company performance mod removing rain particle effects.","Mod de performance pour Lethal Company supprimant les particules de pluie."],
   bcs:["Lethal Company mod that syncs the cruiser between players.","Mod de synchronisation du camion entre les joueurs sur Lethal Company."],
-  email:["Email","Email"],
-  b2:["Certified Cambridge B2 English level","Certification anglais B2"],
-  algorea:["Reached Quarter-Finals of national contest Algoréa twice (Scratch)","Quart de finale du Concours Algoréa national deux fois (Scratch)"],
-  ai:["I use AI to assist with coding","J'utilise l'IA pour m'aider à coder"],
-  german:["I speak a bit of German","Je parle un peu allemand"],
-  discord:["Add on Discord","M'ajouter sur Discord"]
+  email:["Email","Courriel"],
+  discord:["Discord","Discord"],
+  b2:["B2 challenge","Défi B2"],
+  algorea:["Algoréa","Algoréa"],
+  ai:["AI projects","Projets IA"],
+  german:["German practice","Pratique de l’allemand"]
 };
 
+function translate(){
+  document.querySelectorAll('[data-key]').forEach(el=>{
+    const key=el.dataset.key;
+    if(dict[key]) el.innerText = fr? dict[key][1]:dict[key][0];
+  });
+}
 document.getElementById('langToggle').addEventListener('click',()=>{
   fr=!fr;
-  document.getElementById('langToggle').textContent=fr?'EN':'FR';
-  document.querySelectorAll('[data-key]').forEach(el=>{
-    const key=el.getAttribute('data-key');
-    if(dict[key]) el.textContent=dict[key][fr?1:0];
-  });
+  translate();
+  document.getElementById('langToggle').innerText=fr?'EN':'FR';
 });
+translate();
 
-/* ===== PROJECT TABS ===== */
-function showProjects(id, btn){
-  document.querySelectorAll('.projects-grid').forEach(p=>p.style.display='none');
-  document.getElementById(id).style.display='grid';
+/* ---------------- PROJECT MODAL ---------------- */
+function showProjects(type, btn){
+  document.querySelectorAll('.projects-grid').forEach(grid=>grid.style.display='none');
+  document.getElementById(type).style.display='grid';
   document.querySelectorAll('.project-tabs button').forEach(b=>b.classList.remove('active'));
   btn.classList.add('active');
 }
 
-/* ===== PARTICLES ===== */
-const particlesContainer=document.getElementById('particles');
-for(let i=0;i<50;i++){
+const modal=document.getElementById('projectModal');
+const modalImg=document.getElementById('modalImage');
+const modalTitle=document.getElementById('modalTitle');
+const modalPosition=document.getElementById('modalPosition');
+const modalStatus=document.getElementById('modalStatus');
+const modalLink=document.getElementById('modalLink');
+
+document.querySelectorAll('.project-card').forEach(card=>{
+  card.addEventListener('click',()=>{
+    if(!card.dataset.info) return;
+    const info=JSON.parse(card.dataset.info);
+    modalImg.src=info.image;
+    modalTitle.innerText=info.title;
+    modalPosition.innerText=info.position;
+    modalStatus.innerText=info.status;
+    modalStatus.className=info.status==="Active"?"status-active":"status-inactive";
+    modalLink.href=info.link;
+    modal.style.display='flex';
+  });
+});
+
+document.querySelector('.modal .close').addEventListener('click',()=>modal.style.display='none');
+window.addEventListener('click',e=>{if(e.target==modal) modal.style.display='none'});
+
+/* ---------------- PARTICLES ---------------- */
+const particlesEl=document.getElementById('particles');
+for(let i=0;i<70;i++){
   let span=document.createElement('span');
-  span.className='small';
+  span.className=['small','medium','large'][Math.floor(Math.random()*3)];
   span.style.left=Math.random()*100+'%';
-  span.style.top=Math.random()*100+'%';
-  span.style.animationDuration=(10+Math.random()*20)+'s';
-  particlesContainer.appendChild(span);
+  span.style.animationDuration=6+Math.random()*14+'s';
+  span.style.animationDelay=Math.random()*10+'s';
+  particlesEl.appendChild(span);
 }
-for(let i=0;i<30;i++){
-  let span=document.createElement('span');
-  span.className='medium';
-  span.style.left=Math.random()*100+'%';
-  span.style.top=Math.random()*100+'%';
-  span.style.animationDuration=(15+Math.random()*20)+'s';
-  particlesContainer.appendChild(span);
-}
-for(let i=0;i<20;i++){
-  let span=document.createElement('span');
-  span.className='large';
-  span.style.left=Math.random()*100+'%';
-  span.style.top=Math.random()*100+'%';
-  span.style.animationDuration=(20+Math.random()*25)+'s';
-  particlesContainer.appendChild(span);
-}
+
+/* ---------------- TOGGLE EFFECTS ---------------- */
+let effectsOn=true;
+document.querySelector('.toggle-effects').addEventListener('click',()=>{
+  effectsOn=!effectsOn;
+  document.querySelector('.bg').style.display=effectsOn?'block':'none';
+});
 </script>
 
 </body>
