--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 .skills-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;justify-content:center;text-align:center}
 .skill-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.12);transition:.4s}
 .skill-card:hover{transform:translateY(-8px);box-shadow:0 20px 40px rgba(90,160,255,.25)}
+.skill-card.centered{justify-self:center}
 
 /* ---------------- OTHER ---------------- */
 .other-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center;justify-content:center}
 .other-grid p{color:#aaa;transition:.4s}
+.other-grid p.centered{justify-self:center}
 
 /* ---------------- PROJECTS ---------------- */
 .project-tabs{display:flex;justify-content:center;gap:20px;margin-bottom:40px}
@@ -53,9 +55,10 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 .view-btn{margin-top:15px;padding:8px 22px;border-radius:20px;background:linear-gradient(135deg,#9a5cff,#5ddcff);color:#000;border:none;cursor:pointer;font-weight:600}
 
 /* ---------------- CONTACT ---------------- */
-.contact{display:flex;gap:50px;text-align:left;flex-wrap:wrap;justify-content:center}
-.contact p{color:#aaa;margin:0}
-.contact a{color:#5ddcff;text-decoration:none;margin-left:8px}
+.contact{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:left;align-items:center}
+.contact div{display:flex;flex-direction:column}
+.contact label{color:#aaa;font-weight:600;margin-bottom:5px}
+.contact a{color:#5ddcff;text-decoration:none}
 
 /* ---------------- BUTTONS ---------------- */
 .lang-toggle, .toggle-effects{position:fixed;bottom:20px;right:20px;z-index:200;background:rgba(10,10,20,.7);border:1px solid #5ddcff;color:#fff;padding:8px 14px;border-radius:20px;cursor:pointer;backdrop-filter:blur(6px)}
@@ -143,7 +146,7 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
     </div>
     <div class="skill-card"><h3>Python</h3><p data-key="basic"></p></div>
     <div class="skill-card"><h3>AutoHotkey</h3><p data-key="basic"></p></div>
-    <div class="skill-card" style="grid-column:1/-1;"><h3>3D Modelling</h3><p data-key="basic"></p></div>
+    <div class="skill-card centered"><h3>3D Modelling</h3><p data-key="basic"></p></div>
   </div>
 </section>
 
@@ -193,7 +196,7 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
     <p data-key="algorea"></p>
     <p data-key="ai"></p>
     <p data-key="german"></p>
-    <p>Worked on the wiki for the game Abyss on Roblox.</p>
+    <p class="centered" data-key="wiki">Worked on the wiki for the game Abyss on Roblox.</p>
   </div>
 </section>
 
@@ -201,11 +204,11 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
   <h2 data-key="contact"></h2>
   <div class="contact">
     <div>
-      <p data-key="email"></p>
+      <label data-key="email"></label>
       <a href="mailto:mysticlchq@gmail.com">mysticlchq@gmail.com</a>
     </div>
     <div>
-      <p>Discord</p>
+      <label>Discord</label>
       <a href="https://discord.com/users/858353168701718538">@_mystik</a>
     </div>
   </div>
@@ -256,70 +259,8 @@ const dict = {
   algorea:["Reached Quarter-Finals of national contest Algoréa twice (Scratch)","Quart de finale du Concours Algoréa national deux fois (Scratch)"],
   ai:["I use AI to assist with coding","J'utilise l'IA pour m'aider à coder"],
   german:["I speak a bit of German","Je parle un peu allemand"],
-  discord:["Add on discord","M'ajouter sur Discord"]
+  wiki:["Worked on the wiki for the game Abyss on Roblox","J'ai travaillé sur le wiki du jeu Abyss sur Roblox"]
 };
-
-function updateLanguage(){
-  document.querySelectorAll('[data-key]').forEach(el=>{
-    const key = el.getAttribute('data-key');
-    if(dict[key]) el.textContent = dict[key][fr?1:0];
-  });
-  document.getElementById('langToggle').textContent = fr ? 'EN':'FR';
-}
-document.getElementById('langToggle').addEventListener('click',()=>{
-  fr = !fr;
-  updateLanguage();
-});
-updateLanguage();
-
-function showProjects(id, btn){
-  document.querySelectorAll('.projects-grid').forEach(grid=>grid.style.display='none');
-  document.getElementById(id).style.display='grid';
-  document.querySelectorAll('.project-tabs button').forEach(b=>b.classList.remove('active'));
-  btn.classList.add('active');
-}
-
-let effectsOn = true;
-document.querySelector('.toggle-effects').addEventListener('click',()=>{
-  effectsOn = !effectsOn;
-  document.querySelector('.bg').style.display = effectsOn?'block':'none';
-  document.querySelector('.toggle-effects').textContent = effectsOn?'Disable Effects':'Enable Effects';
-});
-
-const particles = document.getElementById('particles');
-for(let i=0;i<150;i++){
-  const span = document.createElement('span');
-  const size = Math.random()*3+1;
-  span.className = size<1.5?'small':size<2.5?'medium':'large';
-  span.style.left=Math.random()*100+'vw';
-  span.style.animationDuration=10+Math.random()*20+'s';
-  span.style.width=size+'px';
-  span.style.height=size+'px';
-  particles.appendChild(span);
-}
-
-const modal = document.getElementById('projectModal');
-const modalImage = document.getElementById('modalImage');
-const modalTitle = document.getElementById('modalTitle');
-const modalPosition = document.getElementById('modalPosition');
-const modalStatus = document.getElementById('modalStatus');
-const modalLink = document.getElementById('modalLink');
-document.querySelectorAll('.project-card .view-btn').forEach(btn=>{
-  btn.addEventListener('click',e=>{
-    const info = JSON.parse(btn.parentElement.dataset.info||'{}');
-    if(Object.keys(info).length){
-      modal.style.display='flex';
-      modalImage.src = info.image||'';
-      modalTitle.textContent = info.title||'';
-      modalPosition.textContent = info.position||'';
-      modalStatus.textContent = info.status||'';
-      modalStatus.className = info.status==='Active'?'status-active':'status-inactive';
-      modalLink.href = info.link||'#';
-    }
-  });
-});
-document.querySelector('.modal .close').addEventListener('click',()=>modal.style.display='none');
-window.addEventListener('click',e=>{if(e.target==modal) modal.style.display='none'});
 </script>
 
 </body>
